Minor spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,12 @@ nav a:hover{
 	display:none;
 }
 
+.artimg{
+	display: block;
+	width:340px;
+	margin: 0 auto;
+}
+
 @media screen and (min-width: 600px){
 	
 	nav li{
